[package]
name = "wb-toolsloader"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
regex = "1.10.2"
indexmap = { version = "2.7.0", features = ["serde"] }

[build-dependencies]
winresource = "0.1.19"
